# telegram-image-bot

./: .env.example  .gitignore  Caddyfile  Dockerfile.bot  Dockerfile.processor  Makefile  README.md  TODO  docker-compose.yml  main.py  pyproject.toml
admin/: Dockerfile  app.py  config.py
admin/views/: users.py
bot/: main.py
bot/handlers/: __init__.py  callbacks.py  commands.py  history.py  photo.py
bot/middlewares/: __init__.py  i18n.py  quota_check.py  session.py  user_management.py
bot/services/: task_publisher.py
configs/grafana/datasources/: datasource.yml
configs/prometheus/: prometheus.yml
migrations/: env.py
processor/: worker.py
processor/tasks/: image_processing.py
shared/: config.py  database.py  models.py  s3_client.py
shared/core/: logger.py
